--- a/index.ipynb
+++ b/index.ipynb
@@ -35,26 +35,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A=\n",
-      " [[1402  191]\n",
+      "[[1402  191]\n",
       " [1371  821]\n",
       " [ 949 1437]\n",
       " [ 147 1448]]\n",
-      "B=\n",
-      " [[1 2 3]\n",
+      "[[1 2 3]\n",
       " [4 5 6]]\n"
      ]
     }
    ],
    "source": [
-    "# Code Here"
+    "# Code Here\n",
+    "import numpy as np\n",
+    "A = np.array([[1402, 191], [1371,821], [949, 1437], [147, 1448]])\n",
+    "print(A)\n",
+    "B = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "print(B)"
    ]
   },
   {
@@ -66,20 +69,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of A: (4, 2)\n",
-      "Shape of B: (2, 3)\n"
+      "(4, 2)\n",
+      "(2, 3)\n"
      ]
     }
    ],
    "source": [
-    "# Code Here"
+    "# Code Here\n",
+    "print(A.shape)\n",
+    "print(B.shape)"
    ]
   },
   {
@@ -95,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +115,11 @@
     }
    ],
    "source": [
-    "# Code Here"
+    "# Code Here\n",
+    "print(A[0,0])\n",
+    "print(A[0,1])\n",
+    "print(A[2,1])\n",
+    "print(A[3,0])"
    ]
   },
   {
@@ -124,27 +133,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "before random data:\n",
-      " [[0. 0. 0.]\n",
+      "[[0. 0. 0.]\n",
       " [0. 0. 0.]\n",
       " [0. 0. 0.]]\n",
-      "\n",
-      "after random data:\n",
-      " [[2. 7. 5.]\n",
-      " [7. 9. 3.]\n",
-      " [6. 5. 9.]]\n"
+      "[[2. 7. 3.]\n",
+      " [1. 7. 8.]\n",
+      " [5. 8. 9.]]\n"
      ]
     }
    ],
    "source": [
-    "# Code Here (due to random data , your output might be different)"
+    "# Code Here (due to random data , your output might be different)\n",
+    "import random\n",
+    "x = np.zeros((3,3))\n",
+    "print(x)\n",
+    "for i in range(0, x.shape[0]):\n",
+    "    for j in range(0, x.shape[1]):\n",
+    "        x[i][j] = random.randrange(1, 10)\n",
+    "print(x)"
    ]
   },
   {
@@ -159,24 +172,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final output\n",
-      "\n",
-      " [[12.  4. 13.  8.]\n",
-      " [13.  5.  9.  9.]\n",
-      " [11. 11. 11. 17.]\n",
-      " [16. 14.  8. 10.]]\n"
+      "[[2. 2. 7. 5.]\n",
+      " [5. 6. 1. 1.]\n",
+      " [3. 3. 7. 3.]\n",
+      " [4. 1. 1. 9.]]\n",
+      "[[9. 2. 6. 4.]\n",
+      " [4. 1. 9. 3.]\n",
+      " [4. 1. 9. 8.]\n",
+      " [8. 6. 7. 2.]]\n",
+      "[[11.  4. 13.  9.]\n",
+      " [ 9.  7. 10.  4.]\n",
+      " [ 7.  4. 16. 11.]\n",
+      " [12.  7.  8. 11.]]\n"
      ]
     }
    ],
    "source": [
-    "# Code Here (due to random data , your output might be different)"
+    "# Code Here (due to random data , your output might be different)\n",
+    "a = np.zeros((4,4))\n",
+    "b = np.zeros((4,4))\n",
+    "\n",
+    "for i in range(0, a.shape[0]):\n",
+    "    for j in range(0, a.shape[1]):\n",
+    "        a[i][j] = random.randrange(1, 10)\n",
+    "for i in range(0, b.shape[0]):\n",
+    "    for j in range(0, b.shape[1]):\n",
+    "        b[i][j] = random.randrange(1, 10)\n",
+    "print(a)\n",
+    "print(b)\n",
+    "c = a + b\n",
+    "print(c)\n"
    ]
   },
   {
@@ -205,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
